add new leader board page

--- a/src/main/resources/static-resources/help.html
+++ b/src/main/resources/static-resources/help.html
@@ -21,6 +21,7 @@
             <div id="nav-menu" class="dd-menu">
               <div class="dd-item" onclick="window.location.href='/'">Game</div>
               <div class="dd-item" onclick="window.location.href='/playbook.html'">Playbook Viewer</div>
+              <div class="dd-item" onclick="window.location.href='/leader-board.html'">Leader Board</div>
               <div class="dd-item current">Help</div>
             </div>
           </div>
