--- a/src/main/resources/static-resources/playbook.html
+++ b/src/main/resources/static-resources/playbook.html
@@ -24,6 +24,7 @@
         <div id="nav-menu" class="dd-menu">
           <div class="dd-item" onclick="window.location.href='/'">Game</div>
           <div class="dd-item" onclick="window.location.href='/help.html'">Help</div>
+          <div class="dd-item" onclick="window.location.href='/leader-board.html'">Leader Board</div>
           <div class="dd-item current">Playbook Viewer</div>
         </div>
       </div>
