tweak style of the top control bar

--- a/src/main/resources/static-resources/help.html
+++ b/src/main/resources/static-resources/help.html
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="control-center">
-        <div id="controlMessage">Help</div>
+        <div id="controlMessage">Me Dot U Dot Help</div>
       </div>
       <div class="control-right"></div>
     </div>
