tweak styles and look

--- a/src/main/resources/static-resources/leader-board.html
+++ b/src/main/resources/static-resources/leader-board.html
@@ -17,12 +17,13 @@
             <button class="menu-btn dd-toggle" onclick="ddToggle('nav')" id="nav-btn" title="Navigation Menu">
               <img src="images/hamburger-menu-icon.png" alt="Menu" class="menu-icon" />
             </button>
-                        <div id="nav-menu" class="dd-menu">
+            <div id="nav-menu" class="dd-menu">
               <div class="dd-item" onclick="window.location.href='/'">Game</div>
               <div class="dd-item" onclick="window.location.href='/playbook.html'">Playbook Viewer</div>
               <div class="dd-item current">Leader Board</div>
               <div class="dd-item" onclick="window.location.href='/help.html'">Help</div>
             </div>
+          </div>
         </div>
       </div>
       <div class="control-center">
