fix double OR issue

--- a/src/main/resources/static-resources/index.html
+++ b/src/main/resources/static-resources/index.html
@@ -67,7 +67,7 @@
             <button class="btn-secondary" onclick="selectExistingPlayer('p1')">Select</button>
           </div>
 
-          <div class="or-divider">OR</div>
+          <div class="or-divider"></div>
 
           <div class="player-create-section">
             <label>Create new</label>
@@ -163,7 +163,7 @@
             <button class="btn-secondary" onclick="selectExistingPlayer('p2')">Select</button>
           </div>
 
-          <div class="or-divider">OR</div>
+          <div class="or-divider"></div>
 
           <div class="player-create-section">
             <label>Create new</label>
