tweak leader board help

--- a/src/main/resources/static-resources/help.html
+++ b/src/main/resources/static-resources/help.html
@@ -127,19 +127,19 @@
       <section class="help-section">
         <h2>Leader Board</h2>
         <p>
-          The leader board provides a comprehensive view of player performance and game history. It displays the top 50 players ranked by their number of games won, offering detailed insights into
+          The leader board provides a comprehensive view of player performance and game history. It displays the top players ranked by their number of games won, offering detailed insights into
           individual player statistics and game outcomes.
         </p>
         <h3>Leader Board Features</h3>
         <ul>
-          <li><strong>Top Players Ranking:</strong> Shows up to 50 players sorted by games won in descending order.</li>
+          <li><strong>Top Players Ranking:</strong> Shows top players sorted by games won in descending order.</li>
           <li><strong>Player Selection:</strong> Click any player in the rankings to view their detailed game history.</li>
           <li><strong>Real-time Updates:</strong> Rankings are updated automatically when games are completed.</li>
           <li><strong>Interactive Navigation:</strong> Seamlessly browse between different players and their games.</li>
         </ul>
         <h3>Player Game History</h3>
         <ul>
-          <li><strong>Complete Game List:</strong> View all games played by the selected player (up to 50 most recent).</li>
+          <li><strong>Complete Game List:</strong> View all games played by the selected player.</li>
           <li>
             <strong>Game Status Indicators:</strong> Each game shows clear status icons:
             <ul>
