--- a/src/main/resources/static-resources/leader-board.html
+++ b/src/main/resources/static-resources/leader-board.html
@@ -23,6 +23,7 @@
             <div id="nav-menu" class="dd-menu">
               <div class="dd-item" onclick="window.location.href='/'">Game</div>
               <div class="dd-item" onclick="window.location.href='/playbook.html'">Playbook Viewer</div>
+              <div class="dd-item" onclick="window.location.href='/agent-role.html'">Agent Role Viewer</div>
               <div class="dd-item current">Leader Board</div>
               <div class="dd-item" onclick="window.location.href='/help.html'">Help</div>
             </div>
