add game step replay

--- a/src/main/resources/static-resources/leader-board.html
+++ b/src/main/resources/static-resources/leader-board.html
@@ -85,6 +85,16 @@
           <div id="gameBoard" class="game-board">
             <!-- Game board will be rendered here -->
           </div>
+          <div class="replay-controls">
+            <button id="replayFirstBtn" class="replay-btn" title="First move">⏮</button>
+            <button id="replayPrevBtn" class="replay-btn" title="Previous move">◀</button>
+            <div id="replayStatus" class="replay-status">Move 0 / 0</div>
+            <button id="replayNextBtn" class="replay-btn" title="Next move">▶</button>
+            <button id="replayLastBtn" class="replay-btn" title="Last move">⏭</button>
+          </div>
+          <div id="moveDetails" class="move-details">
+            Select a game to review its moves.
+          </div>
         </div>
       </section>
     </div>
