moved playbook to more responsive implementation

--- a/src/main/resources/static-resources/agent-role.html
+++ b/src/main/resources/static-resources/agent-role.html
@@ -72,6 +72,7 @@
     </div>
 
     <script src="/js/common.js"></script>
+    <script src="/js/journal-viewer.js"></script>
     <script src="/js/agent-role.js"></script>
     <script src="/js/diff.js"></script>
   </body>
