--- a/src/main/resources/static-resources/agent-role.html
+++ b/src/main/resources/static-resources/agent-role.html
@@ -8,70 +8,93 @@
     <meta http-equiv="Expires" content="0" />
     <title>Me-Dot-U-Dot Agent Role Viewer</title>
     <link rel="stylesheet" href="/css/common.css" />
+    <link rel="stylesheet" href="/css/common-new.css" />
     <link rel="stylesheet" href="/css/journal-viewer.css" />
-    <link rel="stylesheet" href="/css/agent-role.css" />
   </head>
   <body>
-    <!-- Navigation Menu -->
-    <div class="nav-menu">
-      <div class="dd" id="nav">
-        <button class="menu-btn dd-toggle" onclick="ddToggle('nav')" id="nav-btn" title="Navigation Menu">
-          <img src="/images/hamburger-menu-icon.png" alt="Menu" class="menu-icon" />
-        </button>
-        <div id="nav-menu" class="dd-menu">
-          <div class="dd-item" onclick="window.location.href='/'">Game</div>
-          <div class="dd-item" onclick="window.location.href='/playbook.html'">Playbook Viewer</div>
-          <div class="dd-item current">Agent Role Viewer</div>
-          <div class="dd-item" onclick="window.location.href='/leader-board.html'">Leader Board</div>
-          <div class="dd-item" onclick="window.location.href='/help.html'">Help</div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Agent Selection -->
-    <div class="agent-selection">
-      <div class="dd-container agent-selection-dd-container">
-        <button type="button" class="dd-toggle" onclick="ddToggle('player-dd')" id="player-dd-btn">Select Agent</button>
-        <div class="dd-menu" id="player-dd-menu"></div>
-      </div>
-    </div>
-
-    <!-- Journal Viewer -->
-    <div class="journal-viewer-in-agent-role">
-      <div class="journal-header">
-        <h3>Agent Role Journal</h3>
-      </div>
-
-      <div class="journal-content">
-        <div class="journal-info">
-          <div class="journal-field">
-            <span class="journal-label">Agent ID:</span>
-            <span id="journalAgentId" class="journal-value">-</span>
+    <div class="app-shell">
+      <header class="app-header">
+        <div class="app-header-left">
+          <div class="nav-menu">
+            <div class="dd" id="nav">
+              <button class="menu-btn dd-toggle" onclick="ddToggle('nav')" id="nav-btn" title="Navigation Menu">
+                <img src="/images/hamburger-menu-icon.png" alt="Menu" class="menu-icon" />
+              </button>
+              <div id="nav-menu" class="dd-menu">
+                <div class="dd-item" onclick="window.location.href='/'">Game</div>
+                <div class="dd-item" onclick="window.location.href='/playbook.html'">Playbook Viewer</div>
+                <div class="dd-item current">Agent Role Viewer</div>
+                <div class="dd-item" onclick="window.location.href='/leader-board.html'">Leader Board</div>
+                <div class="dd-item" onclick="window.location.href='/help.html'">Help</div>
+              </div>
+            </div>
           </div>
-          <div class="journal-field">
-            <span class="journal-label">Sequence ID:</span>
-            <span id="journalSequenceId" class="journal-value">-</span>
-          </div>
-          <div class="journal-field">
-            <span class="journal-label">Updated At:</span>
-            <span id="journalUpdatedAt" class="journal-value">-</span>
-          </div>
+          <h1 class="app-header-title">Agent Role Viewer</h1>
         </div>
+      </header>
 
-        <div class="journal-instructions-container">
-          <div class="journal-instructions-label">System Prompt:</div>
-          <div id="journalInstructions" class="journal-instructions">Select an agent to view their agent role journal.</div>
-        </div>
-      </div>
+      <main class="app-main journal-main">
+        <aside class="app-panel journal-list-panel">
+          <div class="app-panel-header">
+            <h2 class="app-panel-title">Agent Players</h2>
+          </div>
+          <div class="app-panel-body journal-list-table-container">
+            <table class="journal-list-table">
+              <thead>
+                <tr>
+                  <th scope="col">Agent Player</th>
+                  <th scope="col">Model</th>
+                </tr>
+              </thead>
+              <tbody id="agentListBody">
+                <tr class="journal-list-empty-row">
+                  <td colspan="2">Loading agent players…</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </aside>
 
-      <div class="journal-navigation">
-        <button id="journalUpBtn" class="nav-btn" onclick="navigateJournal('up')" title="Previous Entry" disabled>▲</button>
-        <button id="journalDownBtn" class="nav-btn" onclick="navigateJournal('down')" title="Next Entry" disabled>▼</button>
-        <label class="diff-checkbox-label"> <input type="checkbox" id="showDiffCheckbox" onchange="toggleDiff()" /> Show diff </label>
-      </div>
+        <section class="app-panel journal-detail-panel">
+          <div class="app-panel-header">
+            <h2 class="app-panel-title">Agent Role Journal</h2>
+          </div>
+
+          <div class="app-panel-body journal-detail-body">
+            <div class="journal-content">
+              <div class="journal-info">
+                <div class="journal-field">
+                  <span class="journal-label">Agent:</span>
+                  <span id="journalAgentId" class="journal-value">-</span>
+                </div>
+                <div class="journal-field">
+                  <span class="journal-label">Sequence ID:</span>
+                  <span id="journalSequenceId" class="journal-value">-</span>
+                </div>
+                <div class="journal-field">
+                  <span class="journal-label">Updated At:</span>
+                  <span id="journalUpdatedAt" class="journal-value">-</span>
+                </div>
+              </div>
+
+              <div class="journal-instructions-container">
+                <div class="journal-instructions-label">System Prompt:</div>
+                <div id="journalInstructions" class="journal-instructions">Select an agent to view their agent role journal.</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="journal-navigation">
+            <button id="journalUpBtn" class="nav-btn" onclick="navigateJournal('up')" title="Previous Entry" disabled>▲</button>
+            <button id="journalDownBtn" class="nav-btn" onclick="navigateJournal('down')" title="Next Entry" disabled>▼</button>
+            <label class="diff-checkbox-label"> <input type="checkbox" id="showDiffCheckbox" onchange="toggleDiff()" /> Show diff </label>
+          </div>
+        </section>
+      </main>
     </div>
 
     <script src="/js/common.js"></script>
+    <script src="/js/common-new.js"></script>
     <script src="/js/journal-viewer.js"></script>
     <script src="/js/agent-role.js"></script>
     <script src="/js/diff.js"></script>
