--- a/src/main/resources/static-resources/agent-role.html
+++ b/src/main/resources/static-resources/agent-role.html
@@ -29,7 +29,9 @@
               </div>
             </div>
           </div>
-          <h1 class="app-header-title">Agent Role Viewer</h1>
+        </div>
+        <div class="app-header-center">
+          <h1 class="app-header-title journal-header-title">Agent Role Viewer</h1>
         </div>
       </header>
 
