--- a/src/main/resources/static-resources/playbook.html
+++ b/src/main/resources/static-resources/playbook.html
@@ -32,7 +32,9 @@
               </div>
             </div>
           </div>
-          <h1 class="app-header-title">Playbook Viewer</h1>
+        </div>
+        <div class="app-header-center">
+          <h1 class="app-header-title journal-header-title">Playbook Viewer</h1>
         </div>
       </header>
 
