fix game control message styles

--- a/src/main/resources/static-resources/index.html
+++ b/src/main/resources/static-resources/index.html
@@ -31,7 +31,10 @@
           </div>
         </div>
         <div class="app-header-center">
-          <div id="controlMessage" class="game-control-message">🎮 Me-Dot-U-Dot</div>
+          <div id="controlMessage" class="game-control-message">
+            <span class="control-message-icons" aria-hidden="true">🎮</span>
+            <span class="control-message-text">Me-Dot-U-Dot</span>
+          </div>
           <div id="levelSelection" class="level-selection" style="display: none">
             <span class="level-label">Select the game level</span>
             <div class="dd" id="level-dd">
